fix: Fix Transaction history alternated row colors in dark mode

--- a/client/src/app/components/stardust/history/TransactionHistory.scss
+++ b/client/src/app/components/stardust/history/TransactionHistory.scss
@@ -24,7 +24,7 @@
             letter-spacing: 0.5px;
 
             &.dark {
-                background: $gray-1;
+                background: var(--transaction-history-dark-row);
             }
 
             th {
